--- a/themes/blankslate-child/style.css
+++ b/themes/blankslate-child/style.css
@@ -45,7 +45,7 @@ header .logo img {
   padding: 25px 65px;
 }
 
-/* form commande quantité */
+/* form commande quantité1 */
 
 .form1  {
   display: flex;
